--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -220,16 +220,6 @@ DOMInterfaces = {
     'nativeType': 'mozilla::dom::workers::ChromeWorkerPrivate',
 },
 
-'DOMRectList': {
-    'headerFile': 'mozilla/dom/DOMRect.h',
-    'resultNotAddRefed': [ 'item' ]
-},
-
-'DOMPointReadOnly': {
-    'headerFile': 'mozilla/dom/DOMPoint.h',
-    'concrete': False,
-},
-
 'Console': {
     'implicitJSContext': [ 'trace', 'time', 'timeEnd' ],
 },
@@ -336,6 +326,20 @@ DOMInterfaces = {
     'binaryNames': {
         'message': 'messageMoz',
     },
+},
+
+'DOMPointReadOnly': {
+    'headerFile': 'mozilla/dom/DOMPoint.h',
+    'concrete': False,
+},
+
+'DOMRectList': {
+    'headerFile': 'mozilla/dom/DOMRect.h',
+    'resultNotAddRefed': [ 'item' ]
+},
+
+'DOMRectReadOnly': {
+    'headerFile': 'mozilla/dom/DOMRect.h',
 },
 
 'DOMSettableTokenList': {
