--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -342,6 +342,10 @@ DOMInterfaces = {
     'headerFile': 'mozilla/dom/DOMRect.h',
 },
 
+'DOMQuad': {
+    'resultNotAddRefed': [ 'bounds', 'p0', 'p1', 'p2', 'p3' ]
+},
+
 'DOMSettableTokenList': {
     'nativeType': 'nsDOMSettableTokenList',
 },
