Bug 814637 - Part 3: DOM changes for IccManager support multiple sim. f=hsinyi. r=smaug

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -789,6 +789,10 @@ DOMInterfaces = {
     'nativeType': 'mozilla::dom::CellBroadcast',
 },
 
+'MozIcc': {
+    'nativeType': 'mozilla::dom::Icc',
+},
+
 'MozMobileConnectionArray': {
     'nativeType': 'mozilla::dom::network::MobileConnectionArray',
     'resultNotAddRefed': [ 'item' ]
