--- a/dom/indexedDB/test/mochitest.ini
+++ b/dom/indexedDB/test/mochitest.ini
@@ -103,6 +103,7 @@ support-files =
 [test_traffic_jam.html]
 [test_transaction_abort.html]
 [test_transaction_abort_hang.html]
+[test_transaction_error.html]
 [test_transaction_lifetimes.html]
 [test_transaction_lifetimes_nested.html]
 [test_transaction_ordering.html]
