Bug 917755. Part 2: Implement DOMPoint. r=jst DOMPointReadOnly is not currently used by anything but it's in the spec so we might as well support it. It would be useful for adding "topLeft"-style APIs to DOMRect.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -225,6 +225,11 @@ DOMInterfaces = {
     'resultNotAddRefed': [ 'item' ]
 },
 
+'DOMPointReadOnly': {
+    'headerFile': 'mozilla/dom/DOMPoint.h',
+    'concrete': False,
+},
+
 'Console': {
     'implicitJSContext': [ 'trace', 'time', 'timeEnd' ],
 },
