--- a/browser/experiments/test/xpcshell/xpcshell.ini
+++ b/browser/experiments/test/xpcshell/xpcshell.ini
@@ -5,7 +5,9 @@ firefox-appdir = browser
 support-files =
   experiments_1.manifest
   ../experiment-1.xpi
+  ../experiment-2.xpi
 
 [test_activate.js]
+[test_api.js]
 [test_conditions.js]
 [test_fetch.js]
