Bug 984014 - Telemetry experiments - Test experiment update. r=felipe

--- a/browser/experiments/test/xpcshell/xpcshell.ini
+++ b/browser/experiments/test/xpcshell/xpcshell.ini
@@ -5,6 +5,7 @@ firefox-appdir = browser
 support-files =
   experiments_1.manifest
   ../experiment-1.xpi
+  ../experiment-1a.xpi
   ../experiment-2.xpi
 
 [test_activate.js]
