--- a/memory/replace/dmd/test/xpcshell.ini
+++ b/memory/replace/dmd/test/xpcshell.ini
@@ -2,9 +2,11 @@
 support-files =
   full-empty-live-expected.txt
   full-empty-dark-matter-expected.txt
+  full-empty-cumulative-expected.txt
   full-unsampled1-live-expected.txt
   full-unsampled1-dark-matter-expected.txt
   full-unsampled2-dark-matter-expected.txt
+  full-unsampled2-cumulative-expected.txt
   full-sampled-live-expected.txt
   script-max-frames.json
   script-max-frames-8-expected.txt
