--- a/taskcluster/docker/funsize-update-generator/Dockerfile
+++ b/taskcluster/docker/funsize-update-generator/Dockerfile
@@ -1,5 +1,5 @@
-FROM ubuntu:vivid
-MAINTAINER Rail Aliiev <rail@mozilla.com>
+FROM ubuntu:xenial
+MAINTAINER Simon Fraser <sfraser@mozilla.com>
 
 # Required software
 ENV DEBIAN_FRONTEND noninteractive
@@ -7,9 +7,9 @@ ENV DEBIAN_FRONTEND noninteractive
 # to make sure that files are removed within a single docker layer
 RUN apt-get update -q && \
     apt-get install -yyq --no-install-recommends \
-    python python-setuptools python-cryptography  libgetopt-simple-perl \
-    bzip2 clamav clamav-freshclam python-requests python-sh curl \
-    python-dev gcc liblzma-dev xz-utils && \
+    python3.5 python3-setuptools python3-cryptography libgetopt-simple-perl \
+    bzip2 clamav clamav-freshclam python3-requests python3-sh curl \
+    python3-dev gcc liblzma-dev xz-utils && \
     apt-get clean
 RUN useradd -d /home/worker -s /bin/bash -m worker
 COPY requirements.txt /tmp/
@@ -19,7 +19,7 @@ RUN for i in 1 2 3 4 5; do freshclam --verbose && break || sleep 15; done
 
 # python-pip installs a lot of dependencies increasing the size of an image
 # drastically. Using easy_install saves us almost 200M.
-RUN easy_install pip
+RUN easy_install3 pip
 RUN pip install -r /tmp/requirements.txt
 
 # scripts
