Bug 1431758 - do not use netmonitor data to fetch stylesheets over 1MB;r=jryans
MozReview-Commit-ID: Gz6dRLiLREm

--- a/devtools/client/styleeditor/test/browser.ini
+++ b/devtools/client/styleeditor/test/browser.ini
@@ -51,6 +51,7 @@ support-files =
   test_private.css
   test_private.html
   doc_fetch_from_netmonitor.html
+  doc_huge_string.css
   doc_long_string.css
   doc_long.css
   doc_short_string.css
