Bug 1461970 - Remove gcli tests using helpers.runTestModule (i.e all of them) and cleanup helpers.js from DeveloperToolbar usages. r=jryans
MozReview-Commit-ID: YyE7W8jIlv

--- a/devtools/client/commandline/test/browser.ini
+++ b/devtools/client/commandline/test/browser.ini
@@ -1,5 +1,4 @@
 [DEFAULT]
-skip-if = e10s # Bug 1034511
 tags = devtools
 subsuite = devtools
 support-files =
@@ -7,44 +6,8 @@ support-files =
   helpers.js
   mockCommands.js
 
-[browser_cmd_calllog.js]
-skip-if = true # Bug 845831
-[browser_cmd_calllog_chrome.js]
-skip-if = true # Bug 845831
-[browser_cmd_csscoverage_util.js]
-skip-if = (e10s && debug) # Bug 1034511 (docShell leaks on debug)
-[browser_cmd_settings.js]
-[browser_gcli_async.js]
-[browser_gcli_canon.js]
-[browser_gcli_cli1.js]
-[browser_gcli_cli2.js]
-[browser_gcli_completion1.js]
-[browser_gcli_completion2.js]
-[browser_gcli_date.js]
-skip-if = true # Bug 934098
-[browser_gcli_exec.js]
-[browser_gcli_fail.js]
-[browser_gcli_file.js]
-[browser_gcli_focus.js]
-[browser_gcli_history.js]
-[browser_gcli_incomplete.js]
-[browser_gcli_inputter.js]
-skip-if = true # Bug 1093205 - Test does not run in Firefox due to missing terminal bug
-[browser_gcli_intro.js]
-[browser_gcli_js.js]
-[browser_gcli_keyboard1.js]
-[browser_gcli_keyboard2.js]
-[browser_gcli_keyboard3.js]
-[browser_gcli_keyboard4.js]
-[browser_gcli_keyboard5.js]
-[browser_gcli_menu.js]
-[browser_gcli_node.js]
-[browser_gcli_resource.js]
-[browser_gcli_short.js]
-[browser_gcli_spell.js]
-[browser_gcli_split.js]
-[browser_gcli_tokenize.js]
-[browser_gcli_tooltip.js]
-skip-if = true # Bug 1093205 - Test does not run in Firefox due to missing terminal
-[browser_gcli_types.js]
-[browser_gcli_union.js]
+# Bug 1447494 - browser.ini file has to have at least one test file
+# browser.js is empty, we have this just to expose test helper files
+# for other folder still using it
+[browser.js]
+skip-if = true
