--- a/tools/lint/flake8.yml
+++ b/tools/lint/flake8.yml
@@ -40,6 +40,7 @@ flake8:
         - testing/mozharness/mozharness/mozilla/l10n/locales.py
         - testing/mozharness/mozharness/mozilla/mar.py
         - testing/mozharness/mozharness/mozilla/testing/
+        - testing/mozharness/mozharness/mozilla/tooltool.py
         - testing/mozharness/mozinfo
         - testing/mozharness/scripts
         - testing/raptor
