Bug 1448417 - [mozlint] Remove ability to specify globs in an 'include' directive, r=egao
There is only a single linter (test-disable.yml) that uses a glob in any
include path, and that usage is easily replaced by using the 'extensions' key
instead.

Since globs in include directives aren't very useful, let's disallow them. This
will allow us to simplify the 'filterpaths' logic quite substantially and make
future refactorings in this area easier.

Differential Revision: https://phabricator.services.mozilla.com/D6798

--- a/tools/lint/test-disable.yml
+++ b/tools/lint/test-disable.yml
@@ -3,8 +3,7 @@ no-comment-disable:
     description: >
       "Use 'disabled=<reason>' to disable a test instead of a
       comment"
-    include:
-        - "**/*.ini"
+    include: ['.']
     exclude:
         - "**/application.ini"
         - "**/l10n.ini"
